--- a/webApp/package.json
+++ b/webApp/package.json
@@ -29,6 +29,7 @@
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
+    "truffle": "^4.1.7",
     "truffle-contract": "^1.1.11",
     "web3": "^0.20.0",
     "webpack": "^2.2.1",
